Bug 199379 - dw_dmac - Missing DT data
Summary: dw_dmac - Missing DT data
Status: RESOLVED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Drivers
Classification: Unclassified
Component: Other (show other bugs)
Hardware: x86-64 Linux
: P1 low
Assignee: Andy Shevchenko
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-12 10:06 UTC by Michal Feix
Modified: 2021-08-06 15:33 UTC (History)
5 users (show)

See Also:
Kernel Version: 4.15.15
Subsystem:
Regression: No
Bisected commit-id:


Attachments
Dmesg output (47.69 KB, text/plain)
2018-04-12 10:06 UTC, Michal Feix
Details

Description Michal Feix 2018-04-12 10:06:11 UTC
Created attachment 275335 [details]
Dmesg output

While booting on Acer TM B115 laptop with Baytrail CPU Celeron N2940, linux kernel emits the following error.

dw_dmac INTL9C60:01: Missing DT data
Comment 1 mattia.b89 2018-08-29 17:39:04 UTC
Same here on a Dell XPS 9343 (i5-5200U)
Comment 3 Dmitry Savostyanov 2019-11-23 14:38:54 UTC
I see a similar line on Google Chromebook Pixel 2015 with Broadwell CPU i7-5500U and kernel 4.19.85-1-lts.   

dw_dmac INTL9C60:00: Missing DT data
Comment 4 Andy Shevchenko 2020-04-07 13:05:43 UTC
This is harmless message, can be ignored. But I got your point. Perhaps in the future it will be reorganized to print it if and only if it's considered an error.

Note You need to log in before you can comment on or make changes to this bug.